# spe-ai-labor-law-assistant

./: .gitignore  CONSIDERATIONS.md  CONTRIBUTING.md  INFORME_TECNICO_RAG.md  README.md  TECHNICAL-REPORT.md  TECHNICAL_SHEET_README.md  fiche_tecnica.md
.github/ISSUE_TEMPLATE/: lls-issue-template.md
chat-ui/: README.md  index.html  package-lock.json  package.json
chat-ui/src/: main.tsx
chat-ui/src/app/: App.tsx  TechnicalSheetPage.tsx  types.ts
chat-ui/src/app/components/ui/: app-snackbar.tsx  citations-panel.tsx  empty-state.tsx  header.tsx  message-bubble.tsx  technical-sheet.tsx  workflow-trace-panel.tsx
chat-ui/src/app/utils/: sourceLinks.ts
chat-ui/src/mocks/: mockService.ts
chat-ui/src/services/: chatService.ts
chat-ui/src/styles/: colors.ts  muiTheme.ts  traceability.css
db_chroma/: chroma.sqlite3
db_chroma/e684616e-6d08-4fa2-9c8b-bc2ea6eea5e7/: index_metadata.pickle
final-report/: consultas-sparql.md  inferencias-ontologia.md
ontology/: labor-law-ontology.ttl
rag/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  fiche_tecnica.md  pyproject.toml
rag/app/: main.py
rag/app/api/: routes.py  schemas.py
rag/app/core/: config.py
rag/app/db/: chroma.py  graphdb.py
rag/app/rag/: KG-RAG-INTEGRATION.md  TECHNICAL-REPORT.md  agents.py  citation_formatter.py  graph_retriever.py  ingestion.py  llm.py  metrics.py  mock.py  prompts.py  query_transformer.py  retriever.py  tools.py
rag/app/rag/pipelines/: run_ingestion.py  run_ingestion_test.py
rag/db_chroma/ffe603f0-d8dd-4898-8ed1-18ef2705495b/: index_metadata.pickle
rag/scripts/: test_graphdb_connection.py
rag/storage/: .gitkeep
rag/tests/: test_api.py  test_kg.py  test_rag.py
storage/chroma/: chroma.sqlite3
